fix and VirtualService

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -4,3 +4,4 @@ kind: Kustomization
 resources:
   - 001_provenance-engine-service.yaml
   - 002_provenance-engine-deployment.yaml
+  - 003_provenance-engine-vs.yaml
